# numinspector

./: CMakeLists.txt  num_inspect.cc
